--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/DSsysBackend
+    url: jdbc:mysql://localhost:3306/elm_springboot3
     username: root
     password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
